--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-simple-pie-chart": "^0.4.0",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-addons-test-utils": "^15.4.2",
